--- a/nca/index.html
+++ b/nca/index.html
@@ -134,32 +134,55 @@ $$</p>
 <div class=post-nav><a href=/10-10-2020/ class=prev rel=prev title="Opening of the blog!"><i class="fas fa-angle-left fa-fw"></i>Opening of the blog!</a>
 <a href=/qq-to-apple-music-playlist/ class=next rel=next title="QQ to Apple Music Playlist">QQ to Apple Music Playlist<i class="fas fa-angle-right fa-fw"></i></a></div>
 </div>
-<aside aria-label=note class=note>
-<section id=comment-thankyou style=display:none;margin-left:5px>
-Thank you for your comment, it will be displayed once it has been approved!
-</section>
-</aside>
-<script type=application/javascript>/comment-thankyou/.test(window.location.href)?document.getElementById('comment-thankyou').style.display='block':document.getElementById('comment-thankyou').style.display='none'</script>
-<button id=staticman-button onclick=showComments()>Show comments</button>
-<section id=staticman-comments class="js-comments staticman-comments">
+<div style=margin-top:5rem>
+<staticman class="js-comments staticman-comments">
 <script type=application/javascript>var onloadCallbackCaptcha=function(a){grecaptcha.render('div-recaptcha')};function showComments(){var a=document.getElementById('staticman-button'),c,b;a.parentNode.removeChild(a),c=document.getElementById('staticman-comments'),c.style.display='block',b=document.createElement('script'),b.setAttribute('src','https://www.google.com/recaptcha/api.js?onload=onloadCallbackCaptcha&render=explicit'),document.head.appendChild(b)}function checkForm(a){return a.yourname.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type your name",!1):a.yourcomment.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type a comment",!1):(a.submitButton.disabled=!0,a.warningComment.style.display='none',a.warningComment.innerText="",a.submitButton.innerText="Sending...",!0)}</script>
 <noscript>Enable JavaScript to view comments.</noscript>
-<h3>No comments</h3>
-<form class="js-form form" method=post action=https://mstcn.herokuapp.com/v2/entry/natelol/comments/main/comments onsubmit="return checkForm(this)">
-<fieldset>
-<input type=hidden name=options[redirect] value=https://natelol.github.io/nca/#comment-thankyou>
+<h3>No comment</h3>
+<form id=comment-form class="js-form form" method=post>
+<h4 class="reply-notice hidden">
+<strong class=reply-arrow><i class="fas fa-share"></i></strong>
+<strong class=reply-name></strong>
+</h4>
 <input type=hidden name=options[slug] value=nca>
 <input type=hidden name=options[parent]>
-<label for=fields[name]>Name:</label>
-<input name=fields[name] id=yourname type=text placeholder="Your name">
-<label for=fields[comment]>Comment:</label>
-<textarea name=fields[comment] id=yourcomment placeholder="What are you thinking?"></textarea>
-<output id=warningComment></output>
-<button class=button id=submitButton>Submit</button>
+<input type=hidden name=fields[replyThread]>
+<input type=hidden name=fields[replyID]>
+<input type=hidden name=fields[replyName]>
+<p>Your email address will not be published. Required fields are marked *.</p>
+<fieldset>
+<div class=textfield>
+<textarea name=fields[comment] placeholder="You can use Markdown syntax*"></textarea>
+</div>
+</fieldset>
+<fieldset>
+<div class=textfield>
+<input name=fields[name] type=text placeholder="Your name*">
+</div>
+</fieldset>
+<fieldset>
+<div class=textfield>
+<input type=email name=fields[email] placeholder="Your email address*">
+</div>
+</fieldset>
+<fieldset>
+<div class=textfield>
+<input type=url name=fields[website] placeholder="You website">
+</div>
+</fieldset>
+<p class=js-notice>
+<strong class="js-notice-text submit-success hidden">Thanks for your comment! It will show on the site once it has been approved.</strong>
+<strong class="js-notice-text submit-failed hidden">Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again.</strong>
+</p>
+<fieldset>
+<button type=submit class=btn>Submit comment</button>
+<button type=submit class="btn hidden" disabled>Submitted</button>
+<button type=reset class=btn value=Reset>Reset</button>
 </fieldset>
 </form>
-</section>
-</article></div>
+<div id=commentPreview class=comment-preview></div>
+</staticman>
+</div></article></div>
 </main><footer class=footer>
 <div class=footer-container><div class=footer-line>Powered by <a href=https://gohugo.io/ target=_blank rel="noopener noreffer" title="Hugo 0.87.0">Hugo</a> | Theme - <a href=https://github.com/dillonzq/LoveIt target=_blank rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
 </div><div class=footer-line><i class="far fa-copyright fa-fw"></i><span itemprop=copyrightYear>2019 - 2021</span><span class=author itemprop=copyrightHolder>&nbsp;<a href=/ target=_blank>Guodong</a></span>&nbsp;|&nbsp;<span class=license><a rel="license external nofollow noopener noreffer" href=https://creativecommons.org/licenses/by-nc/4.0/ target=_blank>CC BY-NC 4.0</a></span></div>
@@ -170,5 +193,5 @@ Thank you for your comment, it will be displayed once it has been approved!
 </a><a href=# id=view-comments class=fixed-button title="View Comments">
 <i class="fas fa-comment fa-fw"></i>
 </a>
-</div><link rel=stylesheet href=/lib/lightgallery/lightgallery.min.css><link rel=stylesheet href=/lib/katex/katex.min.css><link rel=stylesheet href=/lib/katex/copy-tex.min.css><link rel=stylesheet href=/lib/cookieconsent/cookieconsent.min.css><script type=text/javascript src=/lib/smooth-scroll/smooth-scroll.min.js></script><script type=text/javascript src=/lib/autocomplete/autocomplete.min.js></script><script type=text/javascript src=/lib/lunr/lunr.min.js></script><script type=text/javascript src=/lib/lazysizes/lazysizes.min.js></script><script type=text/javascript src=/lib/lightgallery/lightgallery.min.js></script><script type=text/javascript src=/lib/lightgallery/lg-thumbnail.min.js></script><script type=text/javascript src=/lib/lightgallery/lg-zoom.min.js></script><script type=text/javascript src=/lib/clipboard/clipboard.min.js></script><script type=text/javascript src=/lib/sharer/sharer.min.js></script><script type=text/javascript src=/lib/katex/katex.min.js></script><script type=text/javascript src=/lib/katex/auto-render.min.js></script><script type=text/javascript src=/lib/katex/copy-tex.min.js></script><script type=text/javascript src=/lib/katex/mhchem.min.js></script><script type=text/javascript src=/lib/cookieconsent/cookieconsent.min.js></script><script type=text/javascript>window.config={code:{copyTitle:"Copy to clipboard",maxShownLines:10},comment:{},cookieconsent:{content:{dismiss:"Got it!",link:"Learn more",message:"This website uses Cookies to improve your experience."},enable:!0,palette:{button:{background:"#f0f0f0"},popup:{background:"#1aa3ff"}},theme:"edgeless"},lightGallery:{actualSize:!1,exThumbImage:"data-thumbnail",hideBarsDelay:2e3,selector:".lightgallery",speed:400,thumbContHeight:80,thumbWidth:80,thumbnail:!0},math:{delimiters:[{display:!0,left:"$$",right:"$$"},{display:!0,left:"\\[",right:"\\]"},{display:!1,left:"$",right:"$"},{display:!1,left:"\\(",right:"\\)"}],strict:!1},search:{highlightTag:"em",lunrIndexURL:"/index.json",maxResultLength:10,noResultsFound:"No results found",snippetLength:50,type:"lunr"}}</script><script type=text/javascript src=/js/theme.min.js></script></body>
+</div><link rel=stylesheet href=/lib/bootstrap/bootstrap.min.css><link rel=stylesheet href=/lib/lightgallery/lightgallery.min.css><link rel=stylesheet href=/lib/katex/katex.min.css><link rel=stylesheet href=/lib/katex/copy-tex.min.css><link rel=stylesheet href=/lib/cookieconsent/cookieconsent.min.css><script type=text/javascript src=/lib/smooth-scroll/smooth-scroll.min.js></script><script type=text/javascript src=/lib/showdown/showdown.min.js></script><script type=text/javascript src=/lib/jquery/jquery-3.5.1.slim.min.js></script><script type=text/javascript src=/lib/bootstrap/bootstrap.min.js></script><script type=text/javascript src=/js/staticman.js></script><script type=text/javascript src=/js/staticman-preview.js></script><script type=text/javascript src=/lib/autocomplete/autocomplete.min.js></script><script type=text/javascript src=/lib/lunr/lunr.min.js></script><script type=text/javascript src=/lib/lazysizes/lazysizes.min.js></script><script type=text/javascript src=/lib/lightgallery/lightgallery.min.js></script><script type=text/javascript src=/lib/lightgallery/lg-thumbnail.min.js></script><script type=text/javascript src=/lib/lightgallery/lg-zoom.min.js></script><script type=text/javascript src=/lib/clipboard/clipboard.min.js></script><script type=text/javascript src=/lib/sharer/sharer.min.js></script><script type=text/javascript src=/lib/katex/katex.min.js></script><script type=text/javascript src=/lib/katex/auto-render.min.js></script><script type=text/javascript src=/lib/katex/copy-tex.min.js></script><script type=text/javascript src=/lib/katex/mhchem.min.js></script><script type=text/javascript src=/lib/cookieconsent/cookieconsent.min.js></script><script type=text/javascript>window.config={code:{copyTitle:"Copy to clipboard",maxShownLines:10},comment:{},cookieconsent:{content:{dismiss:"Got it!",link:"Learn more",message:"This website uses Cookies to improve your experience."},enable:!0,palette:{button:{background:"#f0f0f0"},popup:{background:"#1aa3ff"}},theme:"edgeless"},lightGallery:{actualSize:!1,exThumbImage:"data-thumbnail",hideBarsDelay:2e3,selector:".lightgallery",speed:400,thumbContHeight:80,thumbWidth:80,thumbnail:!0},math:{delimiters:[{display:!0,left:"$$",right:"$$"},{display:!0,left:"\\[",right:"\\]"},{display:!1,left:"$",right:"$"},{display:!1,left:"\\(",right:"\\)"}],strict:!1},search:{highlightTag:"em",lunrIndexURL:"/index.json",maxResultLength:10,noResultsFound:"No results found",snippetLength:50,type:"lunr"}}</script><script type=text/javascript src=/js/theme.min.js></script></body>
 </html>
