deploy: c132051ee790d4d424ec285e8d908895ca8bc0ac

--- a/10-10-2020/index.html
+++ b/10-10-2020/index.html
@@ -275,7 +275,7 @@ git push origin main
 </h4>
 <div class=comment-content>testing</div>
 <div class=comment-reply-btn>
-<a id=a47d4cd0-05b4-11ec-b678-c7245c07af85 class="btn reply-btn" href=#comment-form title=a47d4cd0-05b4-11ec-b678-c7245c07af85>Reply to this comment</a>
+<a id=a47d4cd0-05b4-11ec-b678-c7245c07af85 class="btn reply-btn" href=#comment-form title=a47d4cd0-05b4-11ec-b678-c7245c07af85>Reply</a>
 </div>
 </article>
 <article id=comment-2 class=static-comment>
@@ -286,7 +286,7 @@ git push origin main
 </h4>
 <div class=comment-content>well this content review $$x^e$$wowo this works like a charm</div>
 <div class=comment-reply-btn>
-<a id=fcd15800-0649-11ec-a58c-471dba33647f class="btn reply-btn" href=#comment-form title=fcd15800-0649-11ec-a58c-471dba33647f>Reply to this comment</a>
+<a id=fcd15800-0649-11ec-a58c-471dba33647f class="btn reply-btn" href=#comment-form title=fcd15800-0649-11ec-a58c-471dba33647f>Reply</a>
 </div>
 </article>
 <article id=comment-3 class=static-comment>
@@ -297,7 +297,7 @@ git push origin main
 </h4>
 <div class=comment-content>Can I ask that when will this work as a charm $v_2$ heihei</div>
 <div class=comment-reply-btn>
-<a id=5ff74470-0655-11ec-a662-9b0befe0715b class="btn reply-btn" href=#comment-form title=5ff74470-0655-11ec-a662-9b0befe0715b>Reply to this comment</a>
+<a id=5ff74470-0655-11ec-a662-9b0befe0715b class="btn reply-btn" href=#comment-form title=5ff74470-0655-11ec-a662-9b0befe0715b>Reply</a>
 </div>
 </article>
 <form id=comment-form class="js-form form" method=post>
@@ -336,7 +336,7 @@ git push origin main
 <strong class="js-notice-text submit-failed hidden">Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again.</strong>
 </p>
 <fieldset>
-<button type=submit class=btn>Submit comment</button>
+<button type=submit class=btn>Comment</button>
 <button type=submit class="btn hidden" disabled>Submitted</button>
 <button type=reset class=btn value=Reset>Reset</button>
 </fieldset>
