--- a/qq-to-apple-music-playlist/index.html
+++ b/qq-to-apple-music-playlist/index.html
@@ -274,7 +274,7 @@ Cancel
 <strong class="js-notice-text submit-failed hidden">Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again.</strong>
 </p>
 <fieldset>
-<button type=submit class=btn>Submit comment</button>
+<button type=submit class=btn>Comment</button>
 <button type=submit class="btn hidden" disabled>Submitted</button>
 <button type=reset class=btn value=Reset>Reset</button>
 </fieldset>
