deploy: d2ebd8c39f6e8e961dbf41281cbd3080f3cb6f5e

--- a/10-10-2020/index.html
+++ b/10-10-2020/index.html
@@ -264,7 +264,7 @@ git push origin main
 </div>
 <div style=margin-top:5rem>
 <staticman class="js-comments staticman-comments">
-<script type=application/javascript>var onloadCallbackCaptcha=function(a){grecaptcha.render('div-recaptcha')};function showComments(){var a=document.getElementById('staticman-button'),c,b;a.parentNode.removeChild(a),c=document.getElementById('staticman-comments'),c.style.display='block',b=document.createElement('script'),b.setAttribute('src','https://www.google.com/recaptcha/api.js?onload=onloadCallbackCaptcha&render=explicit'),document.head.appendChild(b)}function checkForm(a){return a.yourname.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type your name",!1):a.yourcomment.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type a comment",!1):(a.submitButton.disabled=!0,a.warningComment.style.display='none',a.warningComment.innerText="",a.submitButton.innerText="Sending...",!0)}</script>
+<script type=application/javascript>var onloadCallbackCaptcha=function(a){grecaptcha.render('div-recaptcha')};function showComments(){var a=document.getElementById('staticman-button'),c,b;a.parentNode.removeChild(a),c=document.getElementById('staticman-comments'),c.style.display='block',b=document.createElement('script'),b.setAttribute('src','https://www.google.com/recaptcha/api.js?onload=onloadCallbackCaptcha&render=explicit'),document.head.appendChild(b)}function checkForm(a){return typeof grecaptcha=="undefined"?(a.warningComment.style.display='block',a.warningComment.innerText="There was a problem loading the reCaptcha so it is not possible to submit a comment at the moment",!1):grecaptcha.getResponse()==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please confirm you are not a robot :)",!1):a.yourname.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type your name",!1):a.yourcomment.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type a comment",!1):(a.submitButton.disabled=!0,a.warningComment.style.display='none',a.warningComment.innerText="",a.submitButton.innerText="Sending...",!0)}</script>
 <noscript>Enable JavaScript to view comments.</noscript>
 <h3>3 comments</h3>
 <article id=comment-1 class=static-comment>
@@ -310,6 +310,8 @@ git push origin main
 <input type=hidden name=fields[replyThread]>
 <input type=hidden name=fields[replyID]>
 <input type=hidden name=fields[replyName]>
+<input type=hidden name=options[reCaptcha][siteKey] value=6LfBcCgcAAAAALxquMrxUEWwsXU4mwiJjyZ3tYpu>
+<input type=hidden name=options[reCaptcha][secret] value=6LfBcCgcAAAAAGXdd72SZAW-Jy3ZMu3f0Z8M6vB6>
 <p>Your email address will not be published. Required fields are marked *.</p>
 <fieldset>
 <div class=textfield>
@@ -330,6 +332,9 @@ git push origin main
 <div class=textfield>
 <input type=url name=fields[website] placeholder="You website">
 </div>
+</fieldset>
+<fieldset>
+<div class=g-recaptcha data-sitekey=6LfBcCgcAAAAALxquMrxUEWwsXU4mwiJjyZ3tYpu></div>
 </fieldset>
 <p class=js-notice>
 <strong class="js-notice-text submit-success hidden">Thanks for your comment! It will show on the site once it has been approved.</strong>
