deploy: bb057c9e6cae160f23ccb3f14fb85b834ad3d7d9

--- a/nca/index.html
+++ b/nca/index.html
@@ -148,8 +148,6 @@ $$</p>
 <input type=hidden name=fields[replyThread]>
 <input type=hidden name=fields[replyID]>
 <input type=hidden name=fields[replyName]>
-<input type=hidden name=options[reCaptcha][siteKey] value=6LfBcCgcAAAAALxquMrxUEWwsXU4mwiJjyZ3tYpu>
-<input type=hidden name=options[reCaptcha][secret] value=6LfBcCgcAAAAAGXdd72SZAW-Jy3ZMu3f0Z8M6vB6>
 <p>Your email address will not be published. Required fields are marked *.</p>
 <fieldset>
 <div class=textfield>
@@ -173,6 +171,7 @@ $$</p>
 </fieldset>
 <fieldset>
 <div class=g-recaptcha data-sitekey=6LfBcCgcAAAAALxquMrxUEWwsXU4mwiJjyZ3tYpu></div>
+<script src=https://www.google.com/recaptcha/api.js></script>
 </fieldset>
 <p class=js-notice>
 <strong class="js-notice-text submit-success hidden">Thanks for your comment! It will show on the site once it has been approved.</strong>
