--- a/qq-to-apple-music-playlist/index.html
+++ b/qq-to-apple-music-playlist/index.html
@@ -247,8 +247,8 @@ Cancel
 <input type=hidden name=options[parent]>
 <input type=hidden name=fields[replyThread]>
 <input type=hidden name=fields[replyID]>
-<input type=hidden name=fields[replyName]>
-<p>Your email address will not be published. Required fields are marked *.</p>
+<input type=hidden name=fields[replyName]><input type=hidden name=options[reCaptcha][siteKey] value=6LcsligcAAAAAI-ZS8tYg2EAvvVbPDbd_mSZzXjT>
+<input type=hidden name=options[reCaptcha][secret] value="L2WNAxODZfRCMXBH97fOR7hOei6dG/A34fL/4fXScw1+YhI1fnTTSDZoaW0TLujOimRxLhsij+eV3VtsOhOXdLKmvrLDfg4hEumVe1uo/cu8ALVh4ahO2/gC2T3/YOV9RTJmpKyw+3roFS46yMBbdRL9j2ZukxRNlOy9+IwMHRk="><p>Your email address will not be published. Required fields are marked *.</p>
 <fieldset>
 <div class=textfield>
 <textarea name=fields[comment] placeholder="You can use Markdown syntax*"></textarea>
@@ -270,8 +270,7 @@ Cancel
 </div>
 </fieldset>
 <fieldset>
-<div class=g-recaptcha data-sitekey=6LfBcCgcAAAAALxquMrxUEWwsXU4mwiJjyZ3tYpu></div>
-<script src=https://www.google.com/recaptcha/api.js></script>
+<div class=g-recaptcha data-sitekey=6LcsligcAAAAAI-ZS8tYg2EAvvVbPDbd_mSZzXjT></div>
 </fieldset>
 <p class=js-notice>
 <strong class="js-notice-text submit-success hidden">Thanks for your comment! It will show on the site once it has been approved.</strong>
@@ -285,7 +284,8 @@ Cancel
 </form>
 <div id=commentPreview class=comment-preview></div>
 </staticman>
-</div><div id=comments></div></article></div>
+</div>
+<div id=comments></div></article></div>
 </main><footer class=footer>
 <div class=footer-container><div class=footer-line>Powered by <a href=https://gohugo.io/ target=_blank rel="noopener noreffer" title="Hugo 0.87.0">Hugo</a> | Theme - <a href=https://github.com/dillonzq/LoveIt target=_blank rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
 </div><div class=footer-line><i class="far fa-copyright fa-fw"></i><span itemprop=copyrightYear>2019 - 2021</span><span class=author itemprop=copyrightHolder>&nbsp;<a href=/ target=_blank>Guodong</a></span>&nbsp;|&nbsp;<span class=license><a rel="license external nofollow noopener noreffer" href=https://creativecommons.org/licenses/by-nc/4.0/ target=_blank>CC BY-NC 4.0</a></span></div>
