--- a/nca/index.html
+++ b/nca/index.html
@@ -147,8 +147,8 @@ $$</p>
 <input type=hidden name=options[parent]>
 <input type=hidden name=fields[replyThread]>
 <input type=hidden name=fields[replyID]>
-<input type=hidden name=fields[replyName]><input type=hidden name=options[reCaptcha][siteKey] value=6LcsligcAAAAAI-ZS8tYg2EAvvVbPDbd_mSZzXjT>
-<input type=hidden name=options[reCaptcha][secret] value="L2WNAxODZfRCMXBH97fOR7hOei6dG/A34fL/4fXScw1+YhI1fnTTSDZoaW0TLujOimRxLhsij+eV3VtsOhOXdLKmvrLDfg4hEumVe1uo/cu8ALVh4ahO2/gC2T3/YOV9RTJmpKyw+3roFS46yMBbdRL9j2ZukxRNlOy9+IwMHRk="><p>Your email address will not be published. Required fields are marked *.</p>
+<input type=hidden name=fields[replyName]><input type=hidden name=options[recaptcha][siteKey] value=6LcsligcAAAAAI-ZS8tYg2EAvvVbPDbd_mSZzXjT>
+<input type=hidden name=options[recaptcha][secret] value="L2WNAxODZfRCMXBH97fOR7hOei6dG/A34fL/4fXScw1+YhI1fnTTSDZoaW0TLujOimRxLhsij+eV3VtsOhOXdLKmvrLDfg4hEumVe1uo/cu8ALVh4ahO2/gC2T3/YOV9RTJmpKyw+3roFS46yMBbdRL9j2ZukxRNlOy9+IwMHRk="><p>Your email address will not be published. Required fields are marked *.</p>
 <fieldset>
 <div class=textfield>
 <textarea name=fields[comment] placeholder="You can use Markdown syntax*"></textarea>
