deploy: 2da85f57a2f70d946e8da2d4f08f08e2c44e03af

--- a/10-10-2020/index.html
+++ b/10-10-2020/index.html
@@ -264,9 +264,8 @@ git push origin main
 </div>
 <div style=margin-top:5rem>
 <staticman class="js-comments staticman-comments">
-<script type=application/javascript>var onloadCallbackCaptcha=function(a){grecaptcha.render('div-recaptcha')};function showComments(){var a=document.getElementById('staticman-button'),c,b;a.parentNode.removeChild(a),c=document.getElementById('staticman-comments'),c.style.display='block',b=document.createElement('script'),b.setAttribute('src','https://www.google.com/recaptcha/api.js?onload=onloadCallbackCaptcha&render=explicit'),document.head.appendChild(b)}function checkForm(a){return typeof grecaptcha=="undefined"?(a.warningComment.style.display='block',a.warningComment.innerText="There was a problem loading the reCaptcha so it is not possible to submit a comment at the moment",!1):grecaptcha.getResponse()==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please confirm you are not a robot :)",!1):a.yourname.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type your name",!1):a.yourcomment.value==""?(a.warningComment.style.display='block',a.warningComment.innerText="Please type a comment",!1):(a.submitButton.disabled=!0,a.warningComment.style.display='none',a.warningComment.innerText="",a.submitButton.innerText="Sending...",!0)}</script>
 <noscript>Enable JavaScript to view comments.</noscript>
-<h3>3 comments</h3>
+<h4>3 comments</h4>
 <article id=comment-1 class=static-comment>
 <img class=comment-avatar src="https://www.gravatar.com/avatar/?s=48" alt="Nate's gravatar">
 <h4>
@@ -333,6 +332,7 @@ git push origin main
 </fieldset>
 <fieldset>
 <div class=g-recaptcha data-sitekey=6LcsligcAAAAAI-ZS8tYg2EAvvVbPDbd_mSZzXjT></div>
+<script src=https://www.google.com/recaptcha/api.js></script>
 </fieldset>
 <p class=js-notice>
 <strong class="js-notice-text submit-success hidden">Thanks for your comment! It will show on the site once it has been approved.</strong>
