--- a/qq-to-apple-music-playlist/index.html
+++ b/qq-to-apple-music-playlist/index.html
@@ -237,6 +237,7 @@ Cancel
 <div style=margin-top:5rem>
 <staticman class="js-comments staticman-comments">
 <noscript>Enable JavaScript to view comments.</noscript>
+<h4>No comment</h4>
 <form id=comment-form class="js-form form" method=post>
 <h4 class="reply-notice hidden">
 <strong class=reply-arrow><i class="fas fa-share"></i></strong>
